# stac-extract

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.py
.Trash-1000/files/: sentinel-2-l2a_2023-07-04.json  sentinel-2-l2a_2023-07-04.tif  sentinel-2-l2a_2023-07-07.json  sentinel-2-l2a_2023-07-07.tif
.Trash-1000/info/: sentinel-2-l2a_2023-07-04.json.trashinfo  sentinel-2-l2a_2023-07-04.tif.trashinfo  sentinel-2-l2a_2023-07-07.json.trashinfo  sentinel-2-l2a_2023-07-07.tif.trashinfo
examples/: sentinel_2_example.ipynb
pysatimg/: __init__.py  band.py  processor.py  raster.py
pysatimg/extractors/: __init__.py  extractor.py  parallel.py
pysatimg/models/: __init__.py  asset.py  band.py  raster.py
pysatimg/query/: query.py  sentinel2.py  stac.py
pysatimg/settings/: sources.json
pysatimg/sources/: __init__.py  loader.py
pysatimg/sources/configs/: sentinel-2-l2a.yml
scripts/: pysatimg_extract.py  stac_extract.py  stac_sources.py
stac_extract.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stacext/: __init__.py  extractor.py  query.py  sources.py
stacext/converters/: __init__.py  xarray.py
stacext/models/: __init__.py  asset.py  raster.py
stacext/scripts/: stac_extract.py  stac_sources.py
tasks/: Makefile.docker  Makefile.jupyter
