[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "stac-extract"
version = "0.0.1"
dependencies = [
    "numpy>=1.24.0",
    "geopandas~=1.0.1",
    "pyyaml",
    "pystac-client",

    # If you get ImportError: cannot import name '_gdal_array' from 'osgeo', try to reinstall GDAL using the following:
    # pip install --no-build-isolation --no-cache-dir --force-reinstall GDAL==3.7.2 
    "GDAL==3.11.0",

    "alive_progress",
    "netCDF4~=1.7.2",
    "xarray~=2025.4.0",
    "rioxarray==0.19.0"
]
requires-python = ">=3.8"
authors = [
  {name = "Derek Evans", email = "evansgeospatial@gmail.com"},
]
description = "A python package for extracting raster data for an area of interest from the SpatioTemporal Asset Catalogs (STAC)."
readme = "README.md"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/derekevans/stac-extract"

[tool.setuptools.packages]
find = {}

[project.scripts]
stac_extract = "stacext.scripts.stac_extract:main"
stac_sources = "stacext.scripts.stac_sources:main"
